--- a/src/components/ButtonToolbar/ButtonToolbar.module.css
+++ b/src/components/ButtonToolbar/ButtonToolbar.module.css
@@ -29,6 +29,21 @@
     align-items: center;
     justify-content: center;
   }
+
+  .importButtonStyle {
+    width: 82px;
+    height: 35px;
+    background-color: #34495e;
+    color: #ecf0f1;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    grid-column: span 2;
+  }
+  
   
   .iconStyle {
     width: 20px;
