fixed cursor behavior and deselection

--- a/src/components/WebGPUCanvas/WebGPUCanvas.module.css
+++ b/src/components/WebGPUCanvas/WebGPUCanvas.module.css
@@ -5,3 +5,11 @@
     overflow: hidden;
     cursor: url(/Crosshairs.svg) 40 40, crosshair;
   }
+
+  .canvasStyleSelecting {
+    display: block;
+    width: 100vw;
+    height: 100vh;
+    overflow: hidden;
+    cursor: default;
+  }
