--- a/src/components/CommandToolbar/CommandToolbar.module.css
+++ b/src/components/CommandToolbar/CommandToolbar.module.css
@@ -3,7 +3,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 50px;
+    height: 60px;
     background-color: #2c3e50;
     color: #ecf0f1;
     display: flex;
@@ -11,22 +11,60 @@
     align-items: center;
     padding-left: 16px;
     padding-right: 16px;
-    font-size: 18px;
+    font-size: 22px;
+    font-weight: bold;
     box-sizing: border-box;
     z-index: 1000;
-  }
-  
-  .rightSideStyle {
+}
+
+.rightSideStyle {
     display: flex;
     align-items: center;
-  }
-  
-  .logoStyle {
-    height: 30px;
-    margin-right: 10px;
-  }
-  
-  .toolNameStyle {
+    gap: 15px;
+    /* Space between logo and buttons */
+}
+
+.logoStyle {
+    height: 40px;
+    margin-left: 10px;
+}
+
+.toolNameStyle {
     font-weight: bold;
-  }
-  
+}
+
+.signInButton,
+.signUpButton {
+    align-items: center;
+    height: 40px;
+    /* padding: 8px 16px; */
+    font-size: 14px;
+    font-weight:bold;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background-color 0.1s;
+    border: solid 3px #4fa3b9;
+    width: 100px;
+
+}
+
+.signInButton {
+    color: #fff;
+    background-color: #2c3e50;
+}
+
+.signInButton:hover,
+.signUpButton:hover {
+    background-color: #3b879f;
+    border-color: #3b879f;
+}
+
+.signUpButton {
+    background-color: #4fa3b9;
+    color: #fff;
+}
+
+/* .signUpButton:hover {
+    background-color: #27ae60;
+} */
