--- a/src/components/SignUpPopUp/SignUpPopUp.module.css
+++ b/src/components/SignUpPopUp/SignUpPopUp.module.css
@@ -6,8 +6,8 @@
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
   display: flex;
-  align-items: center;
   justify-content: center;
+  align-items: center;
   z-index: 9999;
 }
 
@@ -16,104 +16,127 @@
   color: #ecf0f1;
   padding: 40px;
   border-radius: 8px;
-  text-align: center;
-  max-width: 600px;
-  width: 90%;
   max-height: 90vh;
   overflow-y: auto;
+  width: 400px;
+  box-sizing: border-box;
 }
 
 .popupHeaderStyle {
   display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-bottom: 20px;
-}
-
-.logoStyle {
-  width: 64px;
-  height: 64px;
-  margin-right: 20px;
+  margin-bottom: 40px;
 }
 
 .popupTitleStyle {
   font-size: 48px;
   margin: 0;
-  font-family: Arial, sans-serif;
+  align-self: left;
+  font-style: italic;
+  font-weight: 100;
 }
 
-.popupVersionStyle {
-  font-size: 24px;
-  margin-bottom: 40px;
+.formStyle {
+  display: flex;
+  flex-direction: column;
+  /* gap: 20px; */
+  width: 100%;
 }
 
-.popupDescriptionStyle {
-  font-size: 18px;
-  margin-bottom: 40px;
-  text-align: left;
-  background-color: #212830;
-  padding: 20px;
-  border-radius: 4px;
+.inputTopStyle {
+  padding: 12px;
+  border: 2px solid #353535;
+  font-size: 16px;
+  width: 100%;
+  box-sizing: border-box;
+  transition: border-color 0.1s ease-in-out;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
 }
 
-.errorStyle {
-  color: red;
-  margin-bottom: 20px;
+.inputMiddleStyle {
+  padding: 12px;
+  border: 2px solid #353535;
+  font-size: 16px;
+  width: 100%;
+  box-sizing: border-box;
+  transition: border-color 0.1s ease-in-out;
 }
 
-.troubleshootingListStyle {
-  list-style-type: disc;
-  padding-left: 20px;
-  text-align: left;
-  margin-bottom: 20px;
-  background-color: #c0392b;
-  color: #ecf0f1;
-  padding: 20px;
-  border-radius: 4px;
+.inputBottomStyle {
+  padding: 12px;
+  border: 2px solid #353535;
+  font-size: 16px;
+  width: 100%;
+  box-sizing: border-box;
+  transition: border-color 0.1s ease-in-out;
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
 }
 
-.linkStyle {
-  color: #ffdddd;
-  text-decoration: underline;
+
+.inputTopStyle:focus,
+.inputMiddleStyle:focus,
+.inputBottomStyle:focus {
+  border-color: #4fa3b9;
+  border-width: 2px;
+  outline: none;
+  z-index: 1;
 }
 
-.popupButtonStyle {
-  display: inline-block;
-  padding: 15px 30px;
-  background-color: #34495e;
-  color: #ecf0f1;
-  text-decoration: none;
-  border-radius: 4px;
-  font-size: 18px;
-  border: none;
-  cursor: pointer;
+.buttonContainerStyle {
+  display: flex;
+  justify-content: space-between;
+  gap: 20px;
+  margin-top: 30px;
 }
 
-.spinner {
-  border: 8px solid #34495e;
-  border-top: 8px solid #ecf0f1;
-  border-radius: 50%;
-  width: 30px;
-  height: 30px;
-  animation: spin 1.5s linear infinite;
-  margin-right: 15px;
-}
-
-@keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
-}
-
-.loadingContainer {
+.submitButtonStyle,
+.cancelButtonStyle {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-top: 20px;
+  height: 45px;
+  font-size: 16px;
+  font-weight: bold;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.2s, border-color 0.2s;
+  padding: 0 20px;
+  width: auto;
+  min-width: 120px;
+  border: solid 3px #4fa3b9;
 }
 
-.loadingText {
-  font-size: 18px;
-  color: #ecf0f1;
-  font-style: italic;
-  font-family: Arial, sans-serif;
+.submitButtonStyle {
+  background-color: #4fa3b9;
+  color: #fff;
+}
+
+.submitButtonStyle:hover {
+  background-color: #3b879f;
+  border-color: #3b879f;
+}
+
+.cancelButtonStyle {
+  color: #fff;
+  background-color: #2c3e50;
+  width: 160px;
+}
+
+.cancelButtonStyle:hover {
+  background-color: #3b879f;
+  border-color: #3b879f;
+}
+
+.signInLink {
+  margin-top: 15px; 
+  color: #4fa3b9;
+  margin-left: 10px ;
+  text-decoration: underline;
+}
+
+.signInLink:hover {
+  color: #3b879f;
+  cursor: pointer;
 }
